--- a/example/lib/widgets/template/sidebar.j2.html
+++ b/example/lib/widgets/template/sidebar.j2.html
@@ -6,7 +6,7 @@
       <li>
         <a
           href="/"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-house w-5 text-black"></i>
@@ -16,7 +16,7 @@
       <li>
         <a
           href="/info"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/info') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/info') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-circle-info w-5 text-black"></i>
@@ -26,7 +26,7 @@
       <li>
         <a
           href="/example/form"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/form') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/form') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-pen-to-square w-5 text-black"></i>
@@ -36,7 +36,7 @@
       <li>
         <a
           href="/example/cookie"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/cookie') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/cookie') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-cookie-bite w-5 text-black"></i>
@@ -46,7 +46,7 @@
       <li>
         <a
           href="/example/route"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/route') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/route') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-route w-5 text-black"></i>
@@ -56,7 +56,7 @@
       <li>
         <a
           href="/example/socket"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/socket') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/socket') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-plug w-5 text-black"></i>
@@ -66,7 +66,7 @@
       <li>
         <a
           href="/example/email"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/email') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/email') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-envelope w-5 text-black"></i>
@@ -76,7 +76,7 @@
       <li>
         <a
           href="/example/panel"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/panel') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/panel') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-user-shield w-5 text-black"></i>
@@ -86,7 +86,7 @@
       <li>
         <a
           href="/example/language"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/language') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/language') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-language w-5 text-black"></i>
@@ -107,7 +107,7 @@
             <li>
               <a
                 href="/example/error"
-                class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/error') else '' }}"
+                class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/error') else '' }}"
                 aria-current="page"
               >
                 <i class="fa-solid fa-triangle-exclamation w-5 text-black"></i>
@@ -117,7 +117,7 @@
             <li>
               <a
                 href="/example/dump"
-                class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/dump') else '' }}"
+                class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/dump') else '' }}"
                 aria-current="page"
               >
                 <i class="fa-solid fa-code w-5 text-black"></i>
@@ -132,7 +132,7 @@
       <li>
         <a
           href="/example/database"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/database') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/database') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-database w-5 text-black"></i>
@@ -144,7 +144,7 @@
       <li>
         <a
           href="/example/pagination"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/pagination') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/pagination') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-list-ol w-5 text-black"></i>
@@ -156,7 +156,7 @@
       <li>
         <a
           href="/example/person"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/person') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/person') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-user-group w-5 text-black"></i>
@@ -169,7 +169,7 @@
       <li>
         <a
           href="/example/mysql"
-          class="flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/mysql') else '' }}"
+          class="wave flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-primary-50 hover:text-primary-700 {{ 'bg-primary-50 font-medium text-primary-700' if $e.isPath('/example/mysql') else '' }}"
           aria-current="page"
         >
           <i class="fa-solid fa-database w-5 text-black"></i>
