--- a/example/lib/widgets/template/template.j2.html
+++ b/example/lib/widgets/template/template.j2.html
@@ -7,7 +7,7 @@
   <title>{% block title %}{% endblock %} | {{ $t(title) }}</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <!-- <link rel="stylesheet" href="/assets/effects/wave/wave.css" /> -->
+  <link rel="stylesheet" href="/assets/effects/wave/wave.css" />
   <!-- Local built Tailwind CSS (generated via Tailwind CLI) -->
   <link rel="stylesheet" href="/assets/generated-tailwind.css" />
   <link rel="stylesheet" href="/assets/app.css" crossorigin="anonymous" />
