--- a/example/lib/widgets/template/ui/sorting.j2.html
+++ b/example/lib/widgets/template/ui/sorting.j2.html
@@ -1,7 +1,7 @@
 {% set asc = ((data.order == 'asc') and (data.sort == sortby)) %}
 <a
     href="{{ $l.updateUrlQuery($rq, {'sort': sortby, 'order': 'desc' if asc else 'asc'}) }}"
-    class="inline-flex items-center gap-1 font-medium text-slate-600 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-primary-500/30 rounded no-underline group"
+    class="wave inline-flex items-center gap-1 font-medium rounded text-slate-600 hover:text-slate-900 focus:outline-none no-underline group"
     title="{{ $t(title) }}"
 >
     <span>{{ $t(title) }}</span>
