--- a/example/lib/widgets/template/footer.j2.html
+++ b/example/lib/widgets/template/footer.j2.html
@@ -5,11 +5,10 @@
   crossorigin="anonymous"
 ></script>
 <script
-  src="/assets/bootstrap/node_modules/bootstrap/dist/js/bootstrap.min.js"
   crossorigin="anonymous"
 ></script>
 <script src="/assets/app.js"></script>
-<!-- <script src="/assets/effects/wave/wave.js"></script> -->
+<script src="/assets/effects/wave/wave.js"></script>
 <script src="/assets/websocket.js"></script>
 {{ assets.dataJs() }}
 {{ assets.js() }}
