Fixed languages of example

--- a/example/lib/widgets/template/home.j2.html
+++ b/example/lib/widgets/template/home.j2.html
@@ -50,7 +50,7 @@
         <a
           href="https://pub.dev/packages/webapp"
           class="wave inline-flex items-center rounded-md border border-primary-600 px-3 py-1.5 text-sm font-medium text-primary-700 hover:bg-primary-50 focus:outline-none focus:ring-2 focus:ring-primary-500/30"
-          >Pub.dev</a
+          >{{ $t('project.pubdev') }}</a
         >
       </div>
     </div>
